--- a/portfolio/src/index.html
+++ b/portfolio/src/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
@@ -13,9 +13,9 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   <script src="https://kit.fontawesome.com/46329671cb.js" crossorigin="anonymous"></script>
 
-  <link rel="stylesheet" href="portfolio/src/assets/img">
-  <link rel="stylesheet" href="main.js">
-
+  <!-- <link rel="stylesheet" href="portfolio/src/assets/img"> -->
+  <!-- <script src=".."></script> -->
+  <link rel="stylesheet" href="../../portfolio/src/app/components/contact/contact.component.js">
 </head>
 <body>
   <app-root></app-root>
