--- a/portfolio/src/index.html
+++ b/portfolio/src/index.html
@@ -15,7 +15,7 @@
 
   <!-- <link rel="stylesheet" href="portfolio/src/assets/img"> -->
   <!-- <script src=".."></script> -->
-  <link rel="stylesheet" href="../../portfolio/src/app/components/contact/contact.component.js">
+  <link rel="stylesheet" href="/portfolio/src/app/components/contact/contact.component.js">
 </head>
 <body>
   <app-root></app-root>
