--- a/portfolio/src/index.html
+++ b/portfolio/src/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
   <app-root></app-root>
-  <script>
+  <!-- <script>
     window.onload=function(){
       var icon = document.getElementById("dark_mode");
       icon?.addEventListener('click',()=>{
@@ -27,6 +27,7 @@
         }
       })
     }
-  </script>
+  </script> -->
+ 
 </body>
 </html>
